# llm-math-calculator

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ZH.md  pyproject.toml
data/: hardware.json  presets.json
docs/reports/: 2026-01-18-acceptance-report.md  REVIEW-20260118-项目状态梳理.md  REVIEW-20260121-项目功能验收.md
docs/reports/completed/: 2026-01-18-feature-completion.md  2026-01-18-initial-implementation.md  COMPLETED-20260118-项目初始化.md
docs/standards/: naming-conventions.md
docs/templates/: completed-template.md  progress-template.md  review-template.md
src/lmc/: __init__.py  cli.py  engine.py  loader.py  models.py  optimizer.py  web.py
tests/: test_engine.py
