[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmc"
version = "0.1.0"
description = "LLM Math Calculator - AI infrastructure resource planning tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "LMC Team" }]
keywords = ["llm", "gpu", "training", "inference", "resource-planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
web = [
    "streamlit>=1.30.0",
]

[project.scripts]
lmc = "lmc.cli:app"
lmc-web = "lmc.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lmc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
